# EMverb

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ファイル名
.claude/: settings.json
.claude/commands/: build-check.md  build-fix.md
.claude/handoff/: design.md  prompt.md  spec.md  tasks.md
.copilot/handoff/: design.md  spec.md
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  SampleRateAdapter.cpp  SampleRateAdapter.h
Source/DSP/: DattorroReverb.cpp  DattorroReverb.h
Tests/: ReverbTests.cpp
